layout issue

--- a/src/app/accounts/ledgerregidter/ledgerregidter.component.scss
+++ b/src/app/accounts/ledgerregidter/ledgerregidter.component.scss
@@ -1,16 +1,26 @@
 button { 
     padding: 7px 10px !important;
-    background-color: black !important;
+    background-color: #263238;
     border-radius: 5px !important;
     text-transform: capitalize !important;
     cursor: pointer;
+    outline: none;
+    box-shadow: none;
 }
-
+.tjr-button {
+    cursor: pointer;
+    margin-top: 18px;
+    background: #263238 !important;
+    height: auto;
+    border-radius: 3px !important;
+    padding: 3px 8px !important;
+}
 nb-card-header{
     padding: 15px 20px;
     border: 1px solid #efefef;
     margin-bottom: 10px;
 }
+
 .main{
     display: block;
     margin-top: 20px;
@@ -40,16 +50,7 @@ table{
             padding: 5px 10px !important;
             font-size: 12px;
             width: 150px;
-            button{
-                padding: 0 !important;
-                font-size: 11px;
-                border-radius: 0px !important;
-                margin: 0px;
-                background-color: transparent;
-                color: black;
-                outline: none;
-                box-shadow: none;
-            }
+           
         }
     }
     tbody{
@@ -63,16 +64,7 @@ table{
         
     }
 }
-.add-button{
-    position: fixed;
-    bottom: 10px;
-    right: 50px;
-    border-radius: 100% !important;
-    padding: 15px 20px !important;
-    font-size: 20px;
-    box-shadow: 3px 2px 10px #989898;
-    cursor: pointer !important;
-}
+
 
 .selected {
     background-color: #576c77
@@ -105,6 +97,7 @@ input[type=radio]{
     border: 1px solid #000;
     padding: 3px;
     text-align: left;
+    height: 23px;
   }
   .debit{
     display: inline-block;
@@ -220,4 +213,31 @@ input[type=radio]{
         margin-left: 5px;
         vertical-align: middle;
     }
+}
+
+.x-sub-stocktype {
+    margin: 0;
+    border-bottom: 1px solid #FFF;
+}
+.x-warehouse {
+margin: 0;
+border-bottom: 1px solid #FFF;
+}
+.x-sub-stocktype {
+    .x-col:first-child{
+    margin-left: -9px;
+    }
+    .x-col:last-child {
+        border-right: none;
+        text-align: right;
+        }
+}
+.x-warehouse {
+    .x-col:first-child {
+    margin-left: -9px;
+    }
+    .x-col:last-child {
+        border-right: none;
+        text-align: right;
+        }
 }
