--- a/src/app/accounts/outstanding/outstanding.component.scss
+++ b/src/app/accounts/outstanding/outstanding.component.scss
@@ -1,9 +1,19 @@
 button { 
     padding: 7px 10px !important;
-    background-color: black !important;
+    background-color: #263238;
     border-radius: 5px !important;
     text-transform: capitalize !important;
     cursor: pointer;
+    outline: none;
+    box-shadow: none;
+}
+.tjr-button {
+    cursor: pointer;
+    margin-top: 18px !important;
+    background: #263238 !important;
+    height: auto;
+    border-radius: 3px !important;
+    padding: 3px 8px !important;
 }
 
 nb-card-header{
@@ -26,16 +36,7 @@ nb-card-body{
     font-size: 30px;
     color: #217346;
 }
-.add-button{
-    position: fixed;
-    bottom: 10px;
-    right: 50px;
-    border-radius: 100% !important;
-    padding: 15px 20px !important;
-    font-size: 20px;
-    box-shadow: 3px 2px 10px #989898;
-    cursor: pointer !important;
-}
+
 
 .selected {
     background-color: #576c77
@@ -184,3 +185,31 @@ input[type=radio]{
         vertical-align: middle;
     }
 }
+
+.x-sub-stocktype {
+        margin: 0;
+        border-bottom: 1px solid #FFF;
+}
+.x-warehouse {
+    margin: 0;
+    border-bottom: 1px solid #FFF;
+}
+.x-sub-stocktype {
+    .x-col:first-child{
+    margin-left: -9px;
+    }
+    .x-col:last-child {
+        border-right: none;
+        text-align: right;
+        }
+}
+.x-warehouse {
+    .x-col:first-child {
+    margin-left: -9px;
+    }
+    .x-col:last-child {
+        border-right: none;
+        text-align: right;
+        }
+}
+    
