--- a/src/app/accounts/stoclsummary/stoclsummary.component.scss
+++ b/src/app/accounts/stoclsummary/stoclsummary.component.scss
@@ -1,4 +1,4 @@
-button {
+button { 
     padding: 7px 10px !important;
     background-color: #263238;
     border-radius: 5px !important;
@@ -6,6 +6,14 @@ button {
     cursor: pointer;
     outline: none;
     box-shadow: none;
+}
+.tjr-button {
+    cursor: pointer;
+    margin-top: 18px;
+    background: #263238 !important;
+    height: auto;
+    border-radius: 3px !important;
+    padding: 3px 8px !important;
 }
 
 nb-card-header {
@@ -41,14 +49,7 @@ table tr.highlight {
     border: 1px solid #263238;
 }
 
-.tjr-button {
-    cursor: pointer;
-    margin-top: 18px;
-    background: #263238 !important;
-    height: auto;
-    border-radius: 3px !important;
-    padding: 3px 8px !important;
-}
+
 
 // :host ::ng-deep.TJR-auto-suggestion-container {
 //     border: 1px solid #263238 !important;
@@ -82,16 +83,7 @@ table {
             padding: 5px 10px !important;
             font-size: 12px;
             width: 165px;
-            button {
-                padding: 0 !important;
-                font-size: 11px;
-                border-radius: 0px !important;
-                margin: 0px;
-                background-color: transparent;
-                color: #263238;
-                outline: none;
-                box-shadow: none;
-            }
+           
             span {
                 display: block;
                 margin-right: 40px;
